hca-wasm/src/ffi.rs

#![allow(non_upper_case_globals)]
#![allow(non_camel_case_types)]
#![allow(non_snake_case)]

/* automatically generated by rust-bindgen 0.70.1 */

extern "C" {
    pub fn clHCA_isOurFile(
        data: *const ::std::os::raw::c_void,
        size: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct clHCA {
    _unused: [u8; 0],
}
extern "C" {
    pub fn clHCA_DecodeHeader(
        hca: *mut clHCA,
        data: *const ::std::os::raw::c_void,
        size: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct clHCA_stInfo {
    pub version: ::std::os::raw::c_uint,
    pub headerSize: ::std::os::raw::c_uint,
    pub samplingRate: ::std::os::raw::c_uint,
    pub channelCount: ::std::os::raw::c_uint,
    pub blockSize: ::std::os::raw::c_uint,
    pub blockCount: ::std::os::raw::c_uint,
    pub encoderDelay: ::std::os::raw::c_uint,
    pub encoderPadding: ::std::os::raw::c_uint,
    pub loopEnabled: ::std::os::raw::c_uint,
    pub loopStartBlock: ::std::os::raw::c_uint,
    pub loopEndBlock: ::std::os::raw::c_uint,
    pub loopStartDelay: ::std::os::raw::c_uint,
    pub loopEndPadding: ::std::os::raw::c_uint,
    pub samplesPerBlock: ::std::os::raw::c_uint,
    pub comment: *const ::std::os::raw::c_char,
    pub encryptionEnabled: ::std::os::raw::c_uint,
}
extern "C" {
    pub fn clHCA_getInfo(hca: *mut clHCA, out: *mut clHCA_stInfo) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn clHCA_DecodeBlock(
        hca: *mut clHCA,
        data: *mut ::std::os::raw::c_void,
        size: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn clHCA_ReadSamples16(hca: *mut clHCA, outSamples: *mut ::std::os::raw::c_short);
}
extern "C" {
    pub fn clHCA_SetKey(hca: *mut clHCA, keycode: ::std::os::raw::c_ulonglong);
}